Commit do dia 01/12/2020 Ajuste de algumas activitys e ajustes no arquivo main e result trabalhar na splash esse semana

--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -45,7 +45,11 @@
                 />
 
         </LinearLayout>
-
+        <TextView
+            android:id="@+id/text_resposta"
+            android:layout_width="350dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
