--- a/app/src/main/res/layout/result_activity_imc.xml
+++ b/app/src/main/res/layout/result_activity_imc.xml
@@ -49,7 +49,9 @@
             android:id="@+id/text_resposta"
             android:layout_width="350dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+
+            />
 
     </LinearLayout>
 
